--- a/javascript/index.html
+++ b/javascript/index.html
@@ -3,10 +3,11 @@
 		<title>Curso JS</title>
 	</head>
 	<body>
-		<script>
-		
-		
-				
-		</script>
+		<div id="app">
+			<ul></ul>
+			<input type="text" placeholder="Digite um todo">
+			<button>Adicionar</button>
+		</div>
+		<script src="todos.js"></script>
 	</body>
 </html>
