--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,10 +4,8 @@
 	</head>
 	<body>
 		<div id="app">
-			<ul></ul>
-			<input type="text" placeholder="Digite um todo">
-			<button>Adicionar</button>
 		</div>
-		<script src="todos.js"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
